--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Assets\Scripts\Grind.cs" />
     <Compile Include="Assets\Scripts\HoleController.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
+    <Compile Include="Assets\Scripts\TowerController.cs" />
     <Reference Include="Unity.Timeline.Editor">
       <HintPath>G:/egyetem/8/game/tutorials/Doodle Jump Tutorial/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
